# TinyInfiniTensor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docs/: 训练营作业介绍.md  项目部署.md
include/: test.h
include/core/: allocator.h  blob.h  common.h  data_type.h  graph.h  kernel.h  object.h  op_type.h  operator.h  ref.h  runtime.h  tensor.h
include/operators/: concat.h  element_wise.h  matmul.h  transpose.h  unary.h
include/utils/: data_generator.h  exception.h  operator_utils.h
src/core/: allocator.cc  data_type.cc  graph.cc  op_type.cc  operator.cc  runtime.cc  tensor.cc
src/kernels/cpu/: concat.cc  element_wise.cc  transpose.cc  unary.cc
src/operators/: concat.cc  element_wise.cc  matmul.cc  transpose.cc  unary.cc
src/utils/: exception.cc  operator_utils.cc
test/core/: test_allocator.cc  test_graph.cc
test/kernels/nativecpu/: test_nativecpu_concat.cc  test_nativecpu_elementwise.cc  test_nativecpu_transpose.cc
test/operators/: test_cast.cc  test_clip.cc  test_concat.cc  test_element_wise.cc  test_matmul.cc  test_transpose.cc
